--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,22 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = kuranet.settings
-python_files = tests.py test_*.py *_tests.py
-addopts = --reuse-db --tb=short -p no:warnings
+python_paths = .
+testpaths =
+    tests/
+    kuranet/
+addopts =
+    --ds=kuranet.settings
+    --tb=auto
+    -p no:warnings
+    --no-migrations
+    --junitxml=test-results.xml
+    --cov=.
+    --cov-report=xml:coverage.xml
+    -n auto
+    --durations=10
+    --color=yes
+
+[tool:pytest]
+cov_source =
+    kuranet/
+cov_fail_under = 80
+django_db_keepdb = True
