fix: enhance unit test stage with proper agent context and improved coverage checks

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,13 @@
 [pytest]
+# Core configuration
+DJANGO_SETTINGS_MODULE = kuranet.settings
+python_files = tests.py test_*.py *_tests.py
 python_paths = .
 testpaths =
     tests/
     kuranet/
+
+# Test execution options
 addopts =
     --ds=kuranet.settings
     --tb=auto
@@ -14,7 +19,9 @@ addopts =
     -n auto
     --durations=10
     --color=yes
+    --cov-fail-under=80
 
+# Coverage configuration
 [tool:pytest]
 cov_source =
     kuranet/
