refactor: clean up pytest.ini by removing unnecessary comments and sections

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,13 +1,6 @@
 [pytest]
-# Core configuration
 DJANGO_SETTINGS_MODULE = kuranet.settings
 python_files = tests.py test_*.py *_tests.py
-python_paths = .
-testpaths =
-    tests/
-    kuranet/
-
-# Test execution options
 addopts =
     --ds=kuranet.settings
     --tb=auto
@@ -16,14 +9,10 @@ addopts =
     --junitxml=test-results.xml
     --cov=.
     --cov-report=xml:coverage.xml
+    --cov-fail-under=30
     -n auto
     --durations=10
     --color=yes
-    --cov-fail-under=30
 
-# Coverage configuration
-[tool:pytest]
-cov_source =
-    kuranet/
-cov_fail_under = 30
-django_db_keepdb = True
+[django_db]
+keepdb = True
