feat: enhance testing setup and reporting in CI pipeline
- Updated coverage configuration in .coveragerc for better clarity.
- Improved Jenkinsfile to archive all relevant test and security reports.
- Added conftest.py for pytest configuration and static directory creation.
- Adjusted settings.py to conditionally include static files directory.
- Refined pytest.ini to specify test paths.
- Enhanced integration_tests.sh to run tests with detailed coverage reporting.

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,15 +1,17 @@
 [run]
-source = .
+source = kuranet
 omit = 
-    */migrations/*
     */tests/*
+    */migrations/*
+    */__init__.py
     */admin.py
     */apps.py
-    manage.py
+    */urls.py
 
 [report]
 exclude_lines =
     pragma: no cover
-    def __str__
+    def __repr__
     raise NotImplementedError
     if __name__ == .__main__.:
+    pass
