--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = kuranet.settings
 python_files = tests.py test_*.py *_tests.py
+testpaths = tests polls/tests users/tests
 addopts =
     --ds=kuranet.settings
     --tb=auto
