--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = kuranet.settings
 python_files = tests.py test_*.py *_tests.py
-testpaths = polls/tests users/tests
+testpaths = kuranet/
 addopts =
     --ds=kuranet.settings
     --tb=auto
