Refactor pytest configuration and integration test script for improved coverage reporting and server setup

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,19 +1,20 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = kuranet.settings
 python_files = tests.py test_*.py *_tests.py
-testpaths = kuranet/
+testpaths = .
 addopts =
-    --ds=kuranet.settings
+    --cov=.
+    --cov-report=term-missing
     --tb=auto
     -p no:warnings
     --no-migrations
     --junitxml=test-results.xml
-    --cov=.
     --cov-report=xml:coverage.xml
     --cov-fail-under=50
     -n auto
     --durations=10
     --color=yes
     -v
+
 [django_db]
 keepdb = True
