--- a/pytest.ini
+++ b/pytest.ini
@@ -15,6 +15,6 @@ addopts =
     --durations=10
     --color=yes
     -v
-
+cov_omit = */conftest.py,*/polls/management/commands/seed.py,*/polls/permissions.py,*/kuranet/asgi.py,*/kuranet/wsgi.py,*/manage.py
 [django_db]
 keepdb = True
