--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,18 @@ black==25.1.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
+coverage==7.10.2
 dill==0.4.0
 dj-rest-auth==7.0.1
 Django==5.2.4
 django-allauth==65.10.0
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.10
 exceptiongroup==1.3.0
+execnet==2.1.1
+gunicorn==21.2.0
 idna==3.10
 inflection==0.5.1
 iniconfig==2.1.0
@@ -27,7 +31,9 @@ Pygments==2.19.2
 PyJWT==2.10.1
 pylint==3.3.7
 pytest==8.4.1
+pytest-cov==4.1.0
 pytest-django==4.11.1
+pytest-xdist==3.8.0
 python-decouple==3.8
 python-dotenv==1.1.1
 pytz==2025.2
@@ -39,4 +45,3 @@ tomlkit==0.13.3
 typing_extensions==4.14.1
 uritemplate==4.2.0
 urllib3==2.5.0
-gunicorn==21.2.0
