feat: Update settings and permissions for improved security and load balancing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "cSpell.words": [
-        "VENV"
+        "allauth",
+        "authtoken",
+        "corsheaders",
+        "dotenv",
+        "kuranet",
+        "liwomasjid",
+        "simplejwt",
+        "VENV",
+        "yasg"
     ]
 }
