--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.9.1
 astroid==3.3.11
+attrs==25.3.0
 black==25.1.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
@@ -12,6 +13,7 @@ django-allauth==65.10.0
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
+drf-spectacular==0.28.0
 drf-yasg==1.21.10
 exceptiongroup==1.3.0
 execnet==2.1.1
@@ -20,6 +22,8 @@ idna==3.10
 inflection==0.5.1
 iniconfig==2.1.0
 isort==6.0.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
 mccabe==0.7.0
 mypy_extensions==1.1.0
 packaging==25.0
@@ -38,7 +42,9 @@ python-decouple==3.8
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
+referencing==0.36.2
 requests==2.32.4
+rpds-py==0.27.0
 sqlparse==0.5.3
 tomli==2.2.1
 tomlkit==0.13.3
