Fix settings for API documentation and authentication classes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "dotenv",
         "kuranet",
         "liwomasjid",
+        "onrender",
         "simplejwt",
         "VENV",
         "yasg"
